[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["abdullahnazzal <a.nazzal1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.1"
nltk = "^3.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
